# Babel

./: Audio.cpp  Audio.hpp  CMakeLists.txt  CMakeSettings.json  Codec.cpp  Codec.hpp  README.md  Sound.cpp  Sound.hpp  conanfile.txt  defineAudio.hpp  main.cpp
alsa/include/: Makefile  config.h
alsa/include/sound/: Makefile
alsa/include/sound/uapi/: Makefile
client/: Babel_Client_fr_FR.ts  CMakeLists.txt  call.cpp  call.h  call.ui  dialogconnection.cpp  dialogconnection.h  dialogconnection.ui  image.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  request.cpp  request.h  request.ui  searchfriend.cpp  searchfriend.h  searchfriend.ui  user.cpp  user.h  user.ui
client/Ressources/: box.xml
server/: Connexion.cpp  Connexion.hpp  Db.cpp  Db.hpp  Parser.cpp  Parser.hpp  Server.cpp  Server.hpp  main.cpp
